[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-blockchain = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-runtime = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-api = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-client-api = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-block-builder = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-inherents = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
sp-consensus = { version = "0.10.0-dev", branch = "bholdus-monthly-2021-11", git = "https://github.com/Bholdus/substrate" }
sc-consensus = { version = "0.10.0-dev", branch = "bholdus-monthly-2021-11",git = "https://github.com/Bholdus/substrate" }
log = "0.4.8"
futures = { version = "0.3.17", features = ["compat"] }
sp-timestamp = { version = "4.0.0-dev",  branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
derive_more = "0.99.2"
prometheus-endpoint = { version = "0.9.0", package = "substrate-prometheus-endpoint", branch = "bholdus-monthly-2021-11", git = "https://github.com/Bholdus/substrate" }
async-trait = "0.1"