[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
jsonrpc-pubsub = "18.0.0"
futures = "0.3"
log = "0.4.8"

sc-cli = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate", features = ["wasmtime"] }
sp-core = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-executor = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate", features = ["wasmtime"] }
sc-service = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate", features = ["wasmtime"] }
sc-telemetry = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-keystore = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-transaction-pool = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-transaction-pool-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-consensus-aura = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-consensus-aura = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-consensus = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-consensus = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-consensus-manual-seal = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-network = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-finality-grandpa = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-finality-grandpa = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-client-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-runtime = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-timestamp = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-inherents = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-rpc-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-blockchain = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-block-builder = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-basic-authorship = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
substrate-frame-rpc-system = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
pallet-transaction-payment-rpc = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
frame-benchmarking-cli = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
pallet-base-fee = { path = "../../frame/base-fee" }

[build-dependencies]
substrate-build-script-utils = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
