[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
jsonrpc-pubsub = "18.0.0"
futures = "0.3"
log = "0.4.8"

sc-cli = { version = "0.10.0-dev", branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate", features = ["wasmtime"] }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-executor = { version = "0.10.0-dev", features = [
    "wasmtime",
], git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-service = { version = "0.10.0-dev", features = [
    "wasmtime",
], git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-transaction-pool-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-consensus-manual-seal = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", branch = "bholdus-monthly-2021-11" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-rpc-api = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-blockchain = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sp-block-builder = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
sc-basic-authorship = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
substrate-frame-rpc-system = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
pallet-transaction-payment-rpc = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }
frame-benchmarking-cli = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
pallet-base-fee = { path = "../../frame/base-fee" }

[build-dependencies]
substrate-build-script-utils = { branch = "bholdus-monthly-2021-11",  git = "https://github.com/Bholdus/substrate" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
